objects/Test_Scenario__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Determines whether the piece of functionality or process being tested meets requirements.</description>
        <label>Result</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Profile__c</fullName>
        <label>Salesforce Profile</label>
        <picklist>
            <picklistValues>
                <fullName>ABB Standard User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB Agile Standard User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Script_Prerequisite__c</fullName>
        <label>Script Prerequisite</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Test_Group__c</fullName>
        <label>Target Test Group</label>
        <picklist>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Scenario_Description__c</fullName>
        <label>Test Scenario Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Test Scenario</label>
    <listViews>
        <fullName>Accounts_Contacts_Activities</fullName>
        <columns>NAME</columns>
        <columns>Script_Prerequisite__c</columns>
        <columns>Result__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Test_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Functional_Area__c</field>
            <operation>equals</operation>
            <value>Accounts</value>
        </filters>
        <label>Accounts/Contacts/Activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Analytics</fullName>
        <columns>NAME</columns>
        <columns>Script_Prerequisite__c</columns>
        <columns>Result__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Test_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Functional_Area__c</field>
            <operation>equals</operation>
            <value>Analytic</value>
        </filters>
        <label>Analytics</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Campaign</fullName>
        <columns>NAME</columns>
        <columns>Script_Prerequisite__c</columns>
        <columns>Result__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Test_Group__c</columns>
        <columns>Functional_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Functional_Area__c</field>
            <operation>equals</operation>
            <value>Campaigns</value>
        </filters>
        <label>Campaign</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cases</fullName>
        <columns>NAME</columns>
        <columns>Script_Prerequisite__c</columns>
        <columns>Result__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Test_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Functional_Area__c</field>
            <operation>equals</operation>
            <value>Cases</value>
        </filters>
        <label>Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Leads</fullName>
        <columns>NAME</columns>
        <columns>Script_Prerequisite__c</columns>
        <columns>Result__c</columns>
        <columns>Status__c</columns>
        <columns>Target_Test_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Functional_Area__c</field>
            <operation>equals</operation>
            <value>Leads</value>
        </filters>
        <label>Leads</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Test Scenario Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Pass_Fail_Validation</fullName>
        <active>true</active>
        <description>If the test script has been completed and run, a user must specify whether the test passed or failed.</description>
        <errorConditionFormula>AND
(
ISPICKVAL(Status__c, &quot;Done&quot;),
ISBLANK(TEXT(Result__c))
)</errorConditionFormula>
        <errorMessage>If the status of a Test Script equals &quot;Done&quot;, the result must be specified.</errorMessage>
    </validationRules>
</CustomObject>